linphone_includedir=$(includedir)/linphone

linphone_include_HEADERS=\
	account_creator.h \
	address.h \
	buffer.h \
	call_log.h \
	call_params.h \
	call_stats.h \
	conference.h \
	contactprovider.h \
	content.h \
	core.h \
	core_utils.h \
	event.h \
	friend.h \
	friendlist.h \
	ldapprovider.h \
	lpconfig.h \
	nat_policy.h \
	presence.h \
	proxy_config.h \
	ringtoneplayer.h \
	sipsetup.h \
	tunnel.h \
	vcard.h \
	xmlrpc.h \
	\
	linphonecore.h \
	linphonecore_utils.h \
	linphonefriend.h \
	linphonepresence.h \
	linphone_proxy_config.h \
	linphone_tunnel.h

EXTRA_DIST=$(linphone_include_HEADERS)
