linphone_includedir=$(includedir)/linphone

linphone_include_HEADERS=\
	account_creator.h \
	address.h \
	auth_info.h \
	buffer.h \
	call.h \
	call_log.h \
	call_params.h \
	call_stats.h \
	chat.h \
	conference.h \
	contactprovider.h \
	content.h \
	core.h \
	core_utils.h \
	defs.h \
	dictionary.h \
	error_info.h \
	event.h \
	factory.h \
	friend.h \
	friendlist.h \
	im_encryption_engine.h \
	im_notif_policy.h \
	info_message.h \
	ldapprovider.h \
	lpconfig.h \
	misc.h \
	nat_policy.h \
	payload_type.h \
	player.h \
	presence.h \
	proxy_config.h \
	ringtoneplayer.h \
	sipsetup.h \
	tunnel.h \
	types.h \
	vcard.h \
	wrapper_utils.h \
	xmlrpc.h \
	linphonecore.h \
	linphonecore_utils.h \
	linphonefriend.h \
	linphonepresence.h \
	linphone_proxy_config.h \
	linphone_tunnel.h

EXTRA_DIST=$(linphone_include_HEADERS)
